--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta charset="UTF-8" name="description" content="DRAG LEFT AND RIGHT to find the location of the holy grail!">
+    <meta charset="UTF-8" name="description" content="Try out this quiz app! The quizzes are randomly generated.">
     <title>Quiz App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -21,15 +20,44 @@
         Can you get all ten of these random quiz questions right?
     </p>
 </header>
-<main id="main-app" role="main" class="main-container">
-    <p>Loading...</p>
+<main
+role="main"
+class="main-container"
+>
+<form
+    method="post"
+    >
+    <section
+        class="form-row"
+        >
+        <fieldset
+            id="js-fieldset"
+            role="form"
+            aria-live="polite"
+            class="form-column"
+            >
+        </fieldset>
+        <aside
+            id="js-aside"
+            role="complementary"
+            aria-live="assertive"
+            class="form-column"
+            >
+        </aside>
+    </section>
+    <nav
+        id="js-nav"
+        role="navigation"
+        aria-live="polite"
+        >
+    </nav>
+</form>
 </main>
 <footer role="footer">
     Alex Webb 2017
 </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="jquery.ui.touch-punch.min.js"></script>
 <script src="index.js"></script>
 </html>
