--- a/index-dupe.html
+++ b/index-dupe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta charset="UTF-8" name="description" content="DRAG LEFT AND RIGHT to find the location of the holy grail!">
+    <meta charset="UTF-8" name="description" content="Try out this quiz app! The quizzes are randomly generated.">
     <title>Quiz App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Slabo+27px" rel="stylesheet">
@@ -42,7 +42,7 @@ class="main-container"
             role="complementary"
             aria-live="assertive"
             class="form-column"
-            > 
+            >
         </aside>
     </section>
     <nav
@@ -53,14 +53,11 @@ class="main-container"
     </nav>
 </form>
 </main>
-<footer role="footer">
+<footer role="contentinfo">
     Alex Webb 2017
 </footer>
 </body>
-<!--
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="jquery.ui.touch-punch.min.js"></script>
 <script src="index.js"></script>
--->
 </html>
