--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container">
 <header role="banner">
     <h1>
-        Cool Quiz and the Holy Grail
+        Ultimate Random Quiz
     </h1>
     <h2>
         Test your mettle with the random quiz generator
@@ -27,6 +27,7 @@ class="main-container"
 <form
     id="main-form"
     role="form"
+    aria-labelledby="form-question"
     method="post"
     >
     <section
