css prepped using bem

--- a/index.html
+++ b/index.html
@@ -22,29 +22,30 @@
 </header>
 <main
 role="main"
-class="main-container"
+class="container__main"
 >
 <form
     id="main-form"
     role="form"
     aria-labelledby="form-question"
     method="post"
+    class="main__form"
     >
     <section
-        class="form-row"
+        class="form__row"
         >
         <fieldset
             id="js-fieldset"
             role="radiogroup"
             aria-live="polite"
-            class="form-column"
+            class="form__column"
             >
         </fieldset>
         <aside
             id="js-aside"
             role="complementary"
             aria-live="assertive"
-            class="form-column"
+            class="form__column"
             >
         </aside>
     </section>
@@ -52,11 +53,14 @@ class="main-container"
         id="js-nav"
         role="navigation"
         aria-live="polite"
+        class="form__nav"
         >
     </nav>
 </form>
 </main>
-<footer role="contentinfo">
+<footer
+    role="contentinfo"
+    >
     Alex Webb 2017
 </footer>
 </body>
