--- a/index-dupe.html
+++ b/index-dupe.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="container">
-<header role="banner">
+<header 
+    role="banner"
+    class="container__header">
     <h1>
         Ultimate Random Quiz
     </h1>
@@ -60,6 +62,7 @@ class="container__main"
 </main>
 <footer
     role="contentinfo"
+    class="footer"
     >
     Alex Webb 2017
 </footer>
