--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" name="description" content="Try out this quiz app! The quizzes are randomly generated.">
     <title>Quiz App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito|Roboto" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Nunito|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="container">
@@ -53,6 +53,7 @@ class="container__main"
             aria-live="polite"
             class="form__column form__fieldset"
             >
+            <p>Loading...</p>
         </fieldset>
         <aside
             id="js-aside"
